# cacimbao

./: .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
cacimbao/: __init__.py  data_preparation.py  datasets.py  helpers.py  loaders.py  new_datasets.py
cacimbao/data/aldeias-indigenas/: aldeias-indigenas-08062025.parquet
cacimbao/data/pescadores-e-pescadoras-profissionais/: pescadores-e-pescadoras-profissionais-07062025.parquet
cacimbao/data/pesquisa-nacional-de-saude-2019/: datapackage.json  dicionario_PNS_microdados_2019_23062023.xls
cacimbao/data/sinpatinhas/: sinpatinhas-09122025.parquet
cacimbao/datasets/: __init__.py  loaders.py  metadata.py  preparation.py
data/salario-minimo/: salario-minimo-real-vigente-04062025.parquet
docs/: index.html
docs/assets/: data-editor-DJlusedx.js  index-xpoplReV.js  radar-MK3ICKWK-DBgssXm1.js
notebooks/: pescadores_e_pescadoras.py  sinpatinhas.py
notebooks/public/: tabela4711_domicilios_recenseados_por_especie.csv  tabela4714_populacao_residente_area_territorial_densidade_demografica.csv
tests/: test_datasets.py  test_helpers.py  test_loaders.py
tests/fixtures/: sample_aldeias.csv  sample_pns2019.csv  sample_sinpatinhas.csv
tests/fixtures/pescadores/: pescadores_ba.csv  pescadores_se.csv
tests/fixtures/salarios/: ipeadata_GAC12_SALMINRE12.csv  ipeadata_MTE12_SALMIN12.csv
