[project]
name = "cacimbao"
version = "0.2.0"
description = "Base de dados brasileiras com dados reais para propósitos educacionais"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "narwhals>=0.7.0",
    "polars>=0.20.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "cacimbao/",
]
# heavy files
exclude = ["cacimbao/data/pesquisa-nacional-de-saude-2019/*.parquet"]

[dependency-groups]
analysis = [
    "marimo>=0.14.13",
    "plotly==6.1.2",
]
dev = [
    "fastexcel>=0.14.0",
    "frictionless[parquet]>=5.18.1",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
]
